@@ -452,7 +452,7 @@ public class EmbeddedImplClassLoaderTests extends ESTestCase {
             // getResources
             var urls1 = Collections.list(urlcLoader.getResources(resourcePath)).stream().map(URL::toString).toList();
             var urls2 = Collections.list(embedLoader.getResources(resourcePath)).stream().map(URL::toString).toList();
-            assertThat("urls1=%s, urls2=%s".formatted(urls1, urls2), urls2, hasSize(1));
+            assertThat(String.format(Locale.ROOT, "urls1=%s, urls2=%s", urls1, urls2), urls2, hasSize(1));
             assertThat(urls1.get(0), endsWith("!/" + expectedURLSuffix));
             assertThat(urls2.get(0), endsWith("impl.jar!/IMPL-JARS/res/res-impl.jar/" + expectedURLSuffix));
 
